--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "PluginFactory\\": "src"
         }
     },
-    "require": {}
+    "require": {
+        "symfony/yaml": "^4.2"
+    }
 }
