--- a/example-plugin/src/plugin_factory.yaml
+++ b/example-plugin/src/plugin_factory.yaml
@@ -11,12 +11,12 @@ services:
       icon_url: dashicons-store
       position: 110
     links:
-    - link_title: Visit Settings
+    - title: Visit Settings
       link: admin.php
-      link_menu_slug: example_plugin
-    - link_title: My link
+      menu_slug: example_plugin
+    - title: My link
       link: options-general.php
-      link_menu_slug: example_plugin
+      menu_slug: example_plugin
   PluginFactory\Core\EnqueueScripts:
     # action: wp_enqueue_scripts
     scripts:
