pass custom fields through factory settings yaml

--- a/example-plugin/src/plugin_factory.yaml
+++ b/example-plugin/src/plugin_factory.yaml
@@ -28,3 +28,32 @@ services:
       src:
       - assets/styles/m_style.css
   ExamplePlugin\CPT\Book: []
+custom_fields:
+  custom_field_settings_1:
+    settings:
+    - option_group: example_plugin_option_group
+      option_name: text_example
+      callback:
+        class: ExamplePlugin\FieldCallbacks
+        func: optionGroup
+    sections:
+    - id: example_plugin_index
+      title: Settings
+      callback:
+        class: ExamplePlugin\FieldCallbacks
+        func: indexSection
+        params: 
+          title: My admin panel settings
+      page: example_plugin
+    fields:
+    - id: example_plugin_field_id
+      title: Field 1 title
+      callback:
+        class: ExamplePlugin\FieldCallbacks
+        func: textField
+        params:
+          id: example_plugin_field_id
+          place_holder: Placeholder text :)
+      page: example_plugin
+      section: example_plugin_index
+      args:
